--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,14 @@
       <ul class="gallery"></ul>
     </div>
 
+    <button
+      type="button"
+      class="btn search-btn is-hidden"
+      data-action="load-more"
+    >Load More
+    </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
